k8s/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: wa-frontend-svc
  namespace: whiteapp
  labels:
    app: wa-frontend
spec:
  selector:
    app: wa-frontend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
